--- a/package.json
+++ b/package.json
@@ -11,15 +11,25 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
+    "@stripe/react-stripe-js": "^2.7.1",
+    "@stripe/stripe-js": "^3.4.0",
+    "cors": "^2.8.5",
+    "country-region-selector": "^1.0.0",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "firebase": "^10.11.0",
     "notiflix": "^3.2.7",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-country-region-selector": "^3.6.1",
+    "react-country-state-city": "^1.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
+    "react-rating-stars-component": "^2.2.0",
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.23.0",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "stripe": "^15.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
